--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingRight="16dp"
     android:orientation="vertical"
     android:background="@drawable/blackboard"
-    android:rowCount="4"
+    android:rowCount="5"
     android:columnCount="1"
     android:paddingBottom="@dimen/activity_vertical_margin"
 
@@ -24,6 +24,7 @@
         <!--android:layout_height="?attr/actionBarSize"-->
         <!--android:background="?attr/colorPrimary"-->
         <!--/>-->
+
     <Button
         android:id="@+id/start"
         android:layout_row="0"
@@ -35,8 +36,17 @@
         android:onClick="startMaths"
         />
     <Button
-        android:id="@+id/acheive"
+        android:id="@+id/score"
         android:layout_row="1"
+        android:layout_column="0"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/button_score"
+        />
+    <Button
+        android:id="@+id/acheive"
+        android:layout_row="2"
         android:layout_column="0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,7 +55,7 @@
         />
     <Button
         android:id="@+id/settings"
-        android:layout_row="2"
+        android:layout_row="3"
         android:layout_column="0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
