--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -4,21 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/blackboard"
     android:padding="@dimen/activity_vertical_margin"
     tools:context="com.welovekids.mathforkids.Score">
     <TextView android:id="@+id/totalCorrect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="#fff"
         android:text="Total Correct: "/>
     <TextView android:id="@+id/totalWrong"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="#fff"
         android:text="Total Incorrect: "/>
     <TextView android:id="@+id/totalQuestions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="#fff"
         android:text="Total Questions: "/>
 </LinearLayout>
