--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -9,16 +9,27 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.welovekids.mathforkids.QuestionActivity">
-    <TextView  android:id="@+id/question"
-        android:layout_width="wrap_content"
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text = "Put question in here"/>
+        android:orientation="horizontal">
+        <TextView  android:id="@+id/question"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text = "Put question in here"
+            />
+        <EditText android:id="@+id/user_answer"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
 
     <!--Need to fix textField-->
-    <EditText android:id="@+id/user_answer"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_weight="1" />
+
 
     <!--Add GridLayout-->
     <!--Add Button functionality-->
