--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -14,15 +14,38 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <TextView  android:id="@+id/question"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text = "Put question in here"
+
+        <ImageView
+            android:layout_marginTop="100dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src = "@drawable/cat"
             />
-        <EditText android:id="@+id/user_answer"
-            android:layout_height="wrap_content"
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_weight="1"/>
+            android:layout_height="match_parent"
+            android:layout_marginBottom="80dp"
+            android:background="@drawable/speech_bubble"
+            >
+
+            <TextView  android:id="@+id/question"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="15dp"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:text = "Put question in here"
+                />
+            <EditText android:id="@+id/user_answer"
+                android:layout_marginTop="50dp"
+                android:layout_marginLeft="15dp"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_weight="1"/>
+
+
+        </FrameLayout>
+
 
     </LinearLayout>
 
