--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -4,17 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding="@dimen/activity_vertical_margin"
     tools:context="com.welovekids.mathforkids.QuestionActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-
         <ImageView
             android:layout_marginTop="100dp"
             android:layout_width="150dp"
@@ -26,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="80dp"
-            android:background="@drawable/speech_bubble"
+            android:background="@drawable/speech"
             >
 
             <TextView  android:id="@+id/question"
@@ -39,6 +35,7 @@
             <EditText android:id="@+id/user_answer"
                 android:layout_marginTop="50dp"
                 android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_weight="1"/>
@@ -46,88 +43,118 @@
 
         </FrameLayout>
 
-
     </LinearLayout>
 
     <!--Add Button functionality-->
-
-    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/GridLayout1"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:columnCount="4"
-        android:rowCount="4"
-        android:orientation="horizontal"
-        tools:context=".GridXMLActivity"
-        android:layout_gravity="center_vertical">
-        <!--Row one-->
-        <Button  android:id="@+id/Button1"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="1"/>
-        <Button android:id="@+id/Button2"
+            android:orientation="horizontal">
+            <!--Row one-->
+            <Button  android:id="@+id/Button1"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="1"/>
+            <Button android:id="@+id/Button2"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="2"/>
+            <Button android:id="@+id/Button3"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="3"/>
+            <Button android:id="@+id/ButtonBackSpace"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="\u232b"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="2"/>
-        <Button android:id="@+id/Button3"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="3"/>
-        <Button android:id="@+id/ButtonBackSpace"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="\u232b"/>
-        <!--Row two-->
-        <Button android:id="@+id/Button4"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="4"/>
-        <Button android:id="@+id/Button5"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="5"/>
-        <Button android:id="@+id/Button6"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="6"/>
-        <Button android:id="@+id/ButtonClear"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="C"/>
-        <!--Row three-->
-        <Button android:id="@+id/Button7"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="7"/>
-        <Button android:id="@+id/Button8"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="8"/>
-        <Button
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="9"/>
-        <Button
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text=""/>
-        <!--Row four-->
-        <Button android:id="@+id/Button0"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="0"/>
-        <Button android:id="@+id/ButtonDot"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="."/>
-        <Button
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text=""/>
-        <Button android:id="@+id/ButtonEnter"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="="/>
-    </GridLayout>
+            android:orientation="horizontal">
+            <!--Row two-->
+            <Button android:id="@+id/Button4"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="4"/>
+            <Button android:id="@+id/Button5"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="5"/>
+            <Button android:id="@+id/Button6"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="6"/>
+            <Button android:id="@+id/ButtonClear"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="C"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <!--Row three-->
+                <Button android:id="@+id/Button7"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text="7"/>
+                <Button android:id="@+id/Button8"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text="8"/>
+                <Button
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text="9"/>
+                <Button
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text=""/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <!--Row four-->
+                <Button android:id="@+id/Button0"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text="0"/>
+                <Button android:id="@+id/ButtonDot"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text="."/>
+                <Button
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text=""/>
+                <Button android:id="@+id/ButtonEnter"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text="="/>
+            </LinearLayout>
+        </LinearLayout>
+
 </LinearLayout>
