--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -39,6 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_weight="1"/>
+
             <!--Set to some image either tick or cross-->
             <ImageView
                 android:layout_width="wrap_content"
@@ -122,7 +123,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="8"/>
-                <Button
+                <Button android:id="@+id/Button9"
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_weight="1"
