--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,9 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:orientation="vertical"
-    android:background="@drawable/blackboard"
-    android:rowCount="5"
-    android:columnCount="1"
+    android:background="@drawable/homepage"
+    android:rowCount="7"
+    android:columnCount="3"
     android:paddingBottom="@dimen/activity_vertical_margin"
 
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -62,4 +62,11 @@
         android:layout_weight="1"
         android:text="@string/button_settings"
         />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_row="6"
+        android:layout_column="2" />
 </GridLayout>
