--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -7,10 +7,12 @@
     android:padding="@dimen/activity_vertical_margin"
     tools:context="com.welovekids.mathforkids.QuestionActivity">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
 
         <ImageView
             android:layout_marginTop="100dp"
@@ -18,6 +20,7 @@
             android:layout_height="150dp"
             android:src = "@drawable/cat"
             />
+
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -39,19 +42,22 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_weight="1"/>
-
             <!--Set to some image either tick or cross-->
             <ImageView android:id="@+id/solved"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"/>
+                android:layout_gravity="right"
+                android:layout_marginRight="15dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/right"
+                android:visibility="gone"
+                />
 
         </FrameLayout>
 
     </LinearLayout>
-
     <!--Add Button functionality-->
     <LinearLayout
+        android:layout_gravity="bottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
