Fixed score board. Fixed division errors

--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -12,10 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <TextView android:id="@+id/timer"
+
+
+        <!--<TextView android:id="@+id/timer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello"/>
+            android:text="Hello"/>-->
 
         <ImageView
             android:layout_marginTop="100dp"
@@ -44,11 +46,11 @@
                 android:layout_marginRight="15dp"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:layout_weight="1"/>
+                />
             <!--Set to some image either tick or cross-->
             <ImageView android:id="@+id/solved"
-                android:layout_gravity="right"
-                android:layout_marginRight="15dp"
+                android:layout_gravity="end"
+                android:layout_marginRight = "15dp"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/right"
