--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,6 +8,10 @@
     android:padding="@dimen/activity_vertical_margin"
     tools:context="com.welovekids.mathforkids.QuestionActivity">
 
+    <TextView android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,18 +19,12 @@
         android:orientation="horizontal">
 
 
-        <!--<TextView android:id="@+id/timer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello"/>-->
-
         <ImageView
             android:layout_marginTop="100dp"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:src = "@drawable/cat"
             />
-
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -58,6 +57,7 @@
                 />
 
         </FrameLayout>
+
 
     </LinearLayout>
     <!--Add Button functionality-->
