--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,7 @@
     android:paddingRight="16dp"
     android:orientation="vertical"
     tools:context=".SettingsActivity"
-    android:rowCount="3"
+    android:rowCount="4"
     android:columnCount="1"
     android:padding="5dp">
 
@@ -43,6 +43,17 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="20dp"
         android:text="Advanced"/>
+    <Switch
+        android:id="@+id/mute"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_row="3"
+        android:layout_column="0"
+        android:layout_weight="1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="20dp"
+        android:text="mute"/>
 
 
 </GridLayout>
