--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical"
     android:background="@drawable/homepage"
     android:rowCount="7"
-    android:columnCount="3"
+    android:columnCount="4"
     android:paddingBottom="@dimen/activity_vertical_margin"
 
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -63,10 +63,20 @@
         android:text="@string/button_settings"
         />
 
+
+
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
         android:layout_row="6"
         android:layout_column="2" />
+
+    <MediaController
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mediaController3"
+        android:layout_row="5"
+        android:layout_column="3" />
 </GridLayout>
