--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -36,6 +36,7 @@
             <TextView  android:id="@+id/question"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="15dp"
+                android:textSize="18sp"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 />
@@ -45,6 +46,8 @@
                 android:layout_marginRight="15dp"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
+                android:maxLength="10"
+                android:textSize="18sp"
                 />
             <!--Set to some image either tick or cross-->
             <ImageView android:id="@+id/solved"
