--- a/app/src/main/res/layout/activity_achievement.xml
+++ b/app/src/main/res/layout/activity_achievement.xml
@@ -19,7 +19,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/gray_trophy"
+            android:src="@drawable/graytrophy"
             />
 
         <ImageView
@@ -27,7 +27,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/gray_trophy"
+            android:src="@drawable/graytrophy"
             />
     </LinearLayout>
 
@@ -64,7 +64,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/gray_trophy"
+            android:src="@drawable/graytrophy"
             />
 
         <ImageView
@@ -72,7 +72,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/gray_trophy"
+            android:src="@drawable/graytrophy"
             />
     </LinearLayout>
     <LinearLayout
@@ -108,7 +108,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/gray_trophy"
+            android:src="@drawable/graytrophy"
             />
 
         <ImageView
@@ -116,7 +116,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/gray_trophy"
+            android:src="@drawable/graytrophy"
             />
     </LinearLayout>
     <LinearLayout
@@ -152,7 +152,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/gray_trophy"
+            android:src="@drawable/graytrophy"
             />
 
         <ImageView
@@ -160,7 +160,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/gray_trophy"
+            android:src="@drawable/graytrophy"
             />
     </LinearLayout>
     <LinearLayout
