--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:orientation="vertical"
-    android:background="@drawable/homepage"
+    android:background="@drawable/kids"
     android:rowCount="7"
     android:columnCount="4"
     android:paddingBottom="@dimen/activity_vertical_margin"
