--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_vertical_margin"
+    android:background="#fff"
     tools:context="com.welovekids.mathforkids.QuestionActivity">
 
     <TextView android:id="@+id/timer"
